# OakDroidSLAM

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
distribution/boost/lib/arm64-v8a/cmake/boost_atomic-1.74.0/: boost_atomic-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_chrono-1.74.0/: boost_chrono-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_container-1.74.0/: boost_container-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_context-1.74.0/: boost_context-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_contract-1.74.0/: boost_contract-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_coroutine-1.74.0/: boost_coroutine-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_date_time-1.74.0/: boost_date_time-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_exception-1.74.0/: boost_exception-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_fiber-1.74.0/: boost_fiber-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_fiber_numa-1.74.0/: boost_fiber_numa-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_filesystem-1.74.0/: boost_filesystem-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_graph-1.74.0/: boost_graph-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_graph_parallel-1.74.0/: boost_graph_parallel-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_headers-1.74.0/: boost_headers-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_iostreams-1.74.0/: boost_iostreams-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_locale-1.74.0/: boost_locale-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_log-1.74.0/: boost_log-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_log_setup-1.74.0/: boost_log_setup-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_math_c99-1.74.0/: boost_math_c99-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_math_c99f-1.74.0/: boost_math_c99f-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_math_c99l-1.74.0/: boost_math_c99l-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_math_tr1-1.74.0/: boost_math_tr1-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_math_tr1f-1.74.0/: boost_math_tr1f-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_math_tr1l-1.74.0/: boost_math_tr1l-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_mpi-1.74.0/: boost_mpi-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_nowide-1.74.0/: boost_nowide-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_prg_exec_monitor-1.74.0/: boost_prg_exec_monitor-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_program_options-1.74.0/: boost_program_options-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_random-1.74.0/: boost_random-config.cmake
distribution/boost/lib/arm64-v8a/cmake/boost_regex-1.74.0/: boost_regex-config.cmake
distribution/dso/include/util/: SettingsUtil.h
distribution/gtsam/include/gtsam/: config.h
distribution/opencv/include/opencv2/dnn/: dnn.hpp
gradle/wrapper/: gradle-wrapper.properties
(+21 files in other folders)
